# NCFC-Scouting-Project

./: README.md  data_setup.py  naismith.py  pyproject.toml  statsbomb_jm.py
Source/: Model.py  all_shots.pkl  data_setup.py  fk.pkl  logo.py  model.py  model_metric_engineering.py  model_metric_setup.py  model_optimisation.py  player_minutes.csv  player_profiles.py  player_value_matched  player_xg.csv
Statsbomb_Data_Manipulations/: data_engineering_statsbomb.py  data_viz_statsbomb.py
data_logos/: headers.pkl  player_xg.csv  regular_shots.pkl
src/: data_setup.py  logo.py  model.py  model_metric_engineering.py  player_profiles.py
statsbomb_data_manipulations/: statsbomb_jm.py
