[tool.poetry]
name = "ncfc player model"
version = "0.1"
description = ""
authors = ["Jmann777 <87671742+Jmann777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
mplsoccer = "^1.2.4"
statsbombpy = "^1.13.0"
pytest = "^8.2.1"
scikit-learn = "^1.5.0"
xgboost = "1.7.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
